before fetch refactor

--- a/src/styling.css
+++ b/src/styling.css
@@ -104,3 +104,8 @@ h3 {
     overflow: hidden;
     max-width: 67px;
 }
+
+.marketplace-button button {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
