--- a/src/styling.css
+++ b/src/styling.css
@@ -136,3 +136,32 @@ h3 {
     padding-left: 15rem;
     padding-right: 15rem;
 }
+
+.error-page {
+    margin-left: 26rem;
+    margin-top: 5rem;
+}
+
+/* landing page */
+.mysterious-landing {
+    background-color: black;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.eyes {
+    color: white;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.eyes:hover {
+    background-image: url('../public/eyes.png');
+    cursor: pointer;
+}
